# ecosim-co-scientist

./: .gitignore  AGENTS.md  PLANT_TRAITS.md  README.md  analyze_bervo.py  analyze_climate_data.py  analyze_netcdf_structure.py  analyze_traits.py  era5_validation_report.py  explore_data.py  final_era5_validation_analysis.py  main.py  map_traits_to_bervo.py  pyproject.toml  validate_era5_comprehensive.py
.devcontainer/: post_create.sh
bervo/: bervo-terms.tsv
derived/: ecosim_input-netcdf_variables-bervo_aligned.tsv  ecosim_input-netcdf_variables-unmatched.tsv
derived/Allison-2010-boreal-postfire/: metadata.yaml  summary.md
derived/Andresen-2010-plant-nutrient/: metadata.yaml  summary.md
derived/Butler-2012-harvard-forest-warming/: summary.md
derived/Chapin-1995-arctic-tundra-climate/: metadata.yaml  summary.md
derived/Dawes-2011-alpine-dwarf-shrubs/: metadata.yaml  summary.md
docs/: FAO_SOIL_DATABASE.md
hackathon-case_study-experimental_warming_nitrogen/: case_study_hackathon_notes.docx  experimental_warming_nitrogen-benchmark_data.xlsx  fao_soil_bervo_alignment.md  fao_soil_example.csv
hwsd_data/: README.md  load_hwsd2.py
scripts/: align_netcdf_vars_with_bervo.py  download_era5_surface_pressure.py  extract_netcdf_metadata.py  fetch_fao_soil_database.py  generate_netcdf_files.py  generate_netcdf_pipeline.py  install_mdb_tools.sh  load_warming_nitrogen_data.py  select_tier1_sites.py  test_climate_data.py  test_pft_data.py  test_xarray_netcdf.py  validate_era5_climate_data.py
tests/: test_fao_soil_fetcher.py  test_warming_nitrogen_parsers.py
(+51 files in other folders)
