[project]
name = "ecosim-co-scientist"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cdsapi>=0.7.7",
    "duckdb>=1.4.1",
    "h5netcdf>=1.7.3",
    "openpyxl>=3.1.5",
    "pandas>=2.0.0",
    "scipy>=1.16.3",
    "xarray>=2025.10.1",
]

[dependency-groups]
dev = [
    "linkml>=1.9.5",
]
